# raft

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PATCH_SUMMARY.md  PROOF_GATE_IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  RAFT_Audit_Report.md  README.md  alerts.yml  benchmark_results.json  charter.md  config.yaml  current_dashboard.json  dash.py  docker-compose.metrics.yml  metrics_server.py  prometheus.yml  pyproject.toml  raft-beta  smt_verifier_patch.txt  test_dynamic_config.py  updated_dashboard.json
.cursor/: mcp.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  fuzz.yml
agent/: cli.py  metrics.py
agent/core/: charter.py  config.py  config_store.py  diff_builder.py  drift_monitor.py  energy_guard.py  escape_hatches.py  event_log.py  governer.py  governor.py  metrics_server.py  model.py  operator_api.py  plan_models.py  plan_smt.py  smt_stub.py  smt_verifier.py  spectral.py
docker/: docker-compose.yml  docker-compose.yml.backup  override.no-ollama.yml
docs/: api.md  automation.md
raft/agent/core/: plan_models.py
raft/tests/: test_plan_api.py
runtime/: escape_state.json
scripts/: audit_warnings.py  benchmark_smt.py  check_charter_ids.sh  compare_baseline.py  fuzz_diff_generator.py  fuzz_proofs.py  fuzz_proofs_enhanced.py  fuzz_proofs_v2.py  metrics_server.py  quick_warning_analysis.py  run_governor_loop.py  setup_grafana.py  setup_grafana_persistent.py  start_raft.sh  stop_raft.sh  wait_db.sh
templates/: Dockerfile.example  README.example.md  docker-compose.example.yml  example_background_agent.py
tests/: conftest.py  conftest.py.bak  fuzzlib.py  test_cli.py  test_compare_baseline.py  test_diff_builder.py  test_drift_monitor.py  test_energy_guard.py  test_escape_hatches.py  test_fuzz_runner.py  test_fuzz_v2.py  test_governor_runs_one_cycle.py  test_metrics.py  test_operator_api.py  test_plan_api.py  test_smt_diff_builder.py  test_smt_verifier.py  test_spectral_estimator.py  test_spectral_guard.py
