[tool.poetry]
name = "raft"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "agent" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.2"
scipy = "^1.16.1"
pydantic = "^2.0"
loguru = "^0.7.3"
chromadb = "^1.0.15"
psycopg = {extras = ["binary"], version = "^3.2.9"}
redis = "^6.2.0"
z3-solver = "^4.15.1"
gitpython = "^3.1.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
prometheus-client = "^0.20.0"
torch = "^2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"