[tool.poetry]
name = "raft"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "agent" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.2"
scipy = "^1.16.1"
pydantic = "^2.0"
loguru = "^0.7.3"
chromadb = "^1.0.15"
psycopg = {extras = ["binary"], version = "^3.2.9"}
redis = "^6.2.0"
z3-solver = "^4.15.1"
gitpython = "^3.1.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
prometheus-client = "^0.20.0"
torch = "^2.3"
pyyaml = "^6.0"
typer = ">=0.16.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-mock = "3.14.1"
pytest-asyncio = "0.21.2"
httpx = "0.27.2"
black = "25.1.0"
isort = "6.0.1"
pre-commit = "4.2.0"
requests = "2.32.4"
ruff = "0.6.9"
mypy = "1.11.2"

[tool.poetry.scripts]
raft = "agent.cli:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
py_version = 311

[tool.pytest.ini_options]
addopts = "-q -k 'not network'"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Start permissive; tighten incrementally.
select = []
fixable = ["ALL"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = false
follow_imports = "skip"
check_untyped_defs = false
disallow_untyped_defs = false
no_strict_optional = true
namespace_packages = true
explicit_package_bases = true
show_error_codes = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"